# political-analysis-dbs

./: .env.example  .gitignore  CODEOWNERS_Version1.txt  DEPLOYMENT.md  Dockerfile  Dockerfile_Version1.txt  Dockerfile_Version2.civic  Dockerfile_Version2.txt  Dockerfile_Version3.txt  IMPLEMENTATION.md  LICENSE  PROXMOX_DEPLOYMENT.md  README.md  README_Version1.md  README_Version4.md  SECURITY_Version1.md  autoinstall-master_Version2.sh  bloom_perspective_Version1.json  bloom_perspective_Version2.json  civic_legis_hub_Version3.py  civic_legis_platform_Version1.py  civic_legis_stack_Version2.py  civic_legis_superhub_Version1.py  civic_legis_superhub_Version2.py  civic_legis_unified.py  civic_legis_unified_Version4.py  deploy.sh  docker-compose.dev.yml  docker-compose.yml  docker-compose_Version1.yml  docker-compose_Version2.yml  docker-compose_Version3.yml  docker-compose_Version4.yml  env_Version1.example  env_Version2.example  env_Version3.example  env_Version4.example  github_dependabot_Version1.yml  github_pull_request_template_Version1.md  github_workflows_ci_Version1.yml  (+21 more)
.github/workflows/: codacy.yml  hadolint.yml  snyk-container.yml
app/: __init__.py  main.py
app/services/: bill_service.py  embedding_service.py  graph_service.py  legislator_service.py  vote_service.py
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasources.yml
init-scripts/: 01-init-db.sh
localai/config/: chat_config.yaml  embedding_config.yaml  preload_models.yaml
notebooks/: getting_started.ipynb
postgres/init/: 01-init.sql
prometheus/: prometheus.yml
scripts/: backup.py  demo.py  deploy.sh  dev.sh  health_check.py  import_sample_data.py
supabase/: kong.yml
tests/: conftest.py  test_comprehensive.py  test_legislator_service.py
