[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "political-analysis-dbs"
version = "1.0.0"
description = "A comprehensive political legislature analysis database using modern technologies"
authors = [
    {name = "Political Analysis Team", email = "admin@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Database",
]
keywords = ["politics", "database", "analysis", "neo4j", "supabase", "ai", "ml"]
requires-python = ">=3.8"

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "pydantic>=2.5.2",
    "neo4j>=5.15.0",
    "redis>=5.0.1",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.2",
    "numpy>=1.25.2",
    "pandas>=2.1.4",
    "scikit-learn>=1.3.2",
    "requests>=2.31.0",
    "aiohttp>=3.9.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]
visualization = [
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "plotly>=5.17.0",
    "networkx>=3.2.1",
]
ai = [
    "openai>=1.6.1",
    "transformers>=4.36.2",
    "torch>=2.1.2",
    "langchain>=0.0.350",
]
analysis = [
    "jupyter>=1.0.0",
    "streamlit>=1.29.0",
    "spacy>=3.7.2",
    "nltk>=3.8.1",
    "textblob>=0.17.1",
]

[project.urls]
Homepage = "https://github.com/cbwinslow/political-analysis-dbs"
Documentation = "https://github.com/cbwinslow/political-analysis-dbs/blob/main/README.md"
Repository = "https://github.com/cbwinslow/political-analysis-dbs"
Issues = "https://github.com/cbwinslow/political-analysis-dbs/issues"

[project.scripts]
political-api = "app.main:main"
political-import = "scripts.import_sample_data:main"
political-health = "scripts.health_check:main"
political-backup = "scripts.backup:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true