[project]
name = "political-analysis-dbs"
version = "0.5.0"
description = "Political Analysis Database System with Knowledge Graphs"
authors = [
    {name = "Political Analysis Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "tqdm", 
    "psycopg2-binary",
    "pydantic>=2.0.0",
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "sentence-transformers",
    "numpy<2.0.0",
    "scikit-learn",
    "beautifulsoup4",
    "lxml",
    "PyPDF2",
    "redis",
    "neo4j",
    "asyncpg",
    "aiofiles",
    "httpx"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio", 
    "black",
    "ruff",
    "mypy"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "civic_legis_unified.py",
    "README.md"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.scripts]
civic-legis = "civic_legis_unified:main"